--- a/projetos.html
+++ b/projetos.html
@@ -4,47 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grupo Sol | Projetos</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
-    <h1>Projetos do Grupo Solidário</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="projetos.html">Projetos</a></li>
-        <li><a href="cadastro.html">Cadastro</a></li>
-      </ul>
-    </nav>
-  </header>
+    <div class="container"> <h1>Projetos do Grupo Solidário</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="projetos.html">Projetos</a></li>
+          <li><a href="cadastro.html">Cadastro</a></li>
+        </ul>
+      </nav>
+    </div> </header>
 
   <main>
-    <section>
-      <h2>Projetos em Andamento</h2>
-      <article>
-        <h3>Projeto Luz do Amanhã</h3>
-        <p>Iniciativa voltada à educação de jovens em situação de vulnerabilidade social, oferecendo oficinas e cursos gratuitos.</p>
-        <img src="assets/images/projeto1.jpg" alt="Aula do projeto Luz do Amanhã" width="350">
-      </article>
+    <div class="container"> <section class="lista-projetos"> 
+        <h2>Projetos em Andamento</h2>
+        
+        <article class="card"> <img src="assets/images/projeto1.jpg" alt="Aula do projeto Luz do Amanhã" class="card-img"> <div class="card-body"> <h3>Projeto Luz do Amanhã</h3>
+            <p>Iniciativa voltada à educação de jovens em situação de vulnerabilidade social, oferecendo oficinas e cursos gratuitos.</p>
+            <a href="cadastro.html" class="btn btn-primary">Quero Ajudar!</a> </div>
+        </article>
 
-      <article>
-        <h3>Projeto Verde Esperança</h3>
-        <p>Focado na preservação ambiental, o projeto realiza plantios comunitários e campanhas de reciclagem.</p>
-        <img src="assets/images/projeto2.jpg" alt="Plantio de árvores do projeto Verde Esperança" width="350">
-      </article>
-    </section>
+        <article class="card"> <img src="assets/images/projeto2.jpg" alt="Plantio de árvores do projeto Verde Esperança" class="card-img"> <div class="card-body"> <h3>Projeto Verde Esperança</h3>
+            <p>Focado na preservação ambiental, o projeto realiza plantios comunitários e campanhas de reciclagem.</p>
+            <a href="cadastro.html" class="btn btn-primary">Quero Ajudar!</a> </div>
+        </article>
+      </section>
 
-    <section>
-      <h2>Como Ajudar</h2>
-      <p>Você pode participar como <strong>voluntário</strong> ou fazer uma <strong>doação</strong> para apoiar nossos projetos.</p>
-      <ul>
-        <li>Doe qualquer valor via PIX: <strong>doacoes@gruposolidario.org</strong></li>
-        <li>Cadastre-se como voluntário <a href="cadastro.html">clicando aqui</a></li>
-      </ul>
-    </section>
-  </main>
+      <section>
+        <h2>Como Ajudar</h2>
+        <p>Você pode participar como <strong>voluntário</strong> ou fazer uma <strong>doação</strong> para apoiar nossos projetos.</p>
+        <ul>
+          <li>Doe qualquer valor via PIX: <strong>doacoes@gruposolidario.org</strong></li>
+          <li>Cadastre-se como voluntário <a href="cadastro.html" class="btn btn-primary">clicando aqui</a></li> </ul>
+      </section>
+      
+    </div> </main>
 
   <footer>
-    <p>&copy; 2025 Grupo Solidário - Todos os direitos reservados.</p>
+    <div class="container"> <p>&copy; 2025 Grupo Solidário - Todos os direitos reservados.</p>
+    </div>
   </footer>
 </body>
 </html>
