--- a/cadastro.html
+++ b/cadastro.html
@@ -4,65 +4,85 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grupo Sol | Cadastro de Voluntário</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
-    <h1>Cadastro de Voluntário</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="projetos.html">Projetos</a></li>
-        <li><a href="cadastro.html">Cadastro</a></li>
-      </ul>
-    </nav>
+    <div class="container"> <h1>Cadastro de Voluntário</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="projetos.html">Projetos</a></li>
+          <li><a href="cadastro.html">Cadastro</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <section>
-      <h2>Formulário de Inscrição</h2>
-      <form action="#" method="post">
-        <fieldset>
-          <legend>Dados Pessoais</legend>
+    <div class="container"> <section>
+        <h2>Formulário de Inscrição</h2>
+        <form action="#" method="post" class="form-grid"> <fieldset class="form-field-12">
+            <legend>Dados Pessoais</legend>
 
-          <label for="nome">Nome Completo:</label><br>
-          <input type="text" id="nome" name="nome" required><br><br>
+            <div class="form-field-6">
+              <label for="nome">Nome Completo:</label><br>
+              <input type="text" id="nome" name="nome" required>
+            </div>
+            <div class="form-field-6">
+              <label for="email">E-mail:</label><br>
+              <input type="email" id="email" name="email" required>
+            </div>
 
-          <label for="email">E-mail:</label><br>
-          <input type="email" id="email" name="email" required><br><br>
+            <div class="form-field-6">
+              <label for="cpf">CPF:</label><br>
+              <input type="text" id="cpf" name="cpf" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="000.000.000-00">
+            </div>
+            <div class="form-field-6">
+              <label for="telefone">Telefone:</label><br>
+              <input type="tel" id="telefone" name="telefone" required pattern="\(\d{2}\)\s\d{5}-\d{4}" placeholder="(11) 99999-9999">
+            </div>
 
-          <label for="cpf">CPF:</label><br>
-          <input type="text" id="cpf" name="cpf" required pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" placeholder="000.000.000-00"><br><br>
+            <div class="form-field-6"> 
+              <label for="nascimento">Data de Nascimento:</label><br>
+              <input type="date" id="nascimento" name="nascimento" required>
+            </div>
 
-          <label for="telefone">Telefone:</label><br>
-          <input type="tel" id="telefone" name="telefone" required pattern="\(\d{2}\)\s\d{5}-\d{4}" placeholder="(11) 99999-9999"><br><br>
+          </fieldset>
 
-          <label for="nascimento">Data de Nascimento:</label><br>
-          <input type="date" id="nascimento" name="nascimento" required><br><br>
-        </fieldset>
+          <fieldset class="form-field-12">
+            <legend>Endereço</legend>
 
-        <fieldset>
-          <legend>Endereço</legend>
+            <div class="form-field-12">
+              <label for="endereco">Endereço:</label><br>
+              <input type="text" id="endereco" name="endereco" required>
+            </div>
 
-          <label for="endereco">Endereço:</label><br>
-          <input type="text" id="endereco" name="endereco" required><br><br>
+            <div class="form-field-6">
+              <label for="cep">CEP:</label><br>
+              <input type="text" id="cep" name="cep" required pattern="\d{5}-\d{3}" placeholder="00000-000">
+            </div>
+            <div class="form-field-6">
+              <label for="cidade">Cidade:</label><br>
+              <input type="text" id="cidade" name="cidade" required>
+            </div>
 
-          <label for="cep">CEP:</label><br>
-          <input type="text" id="cep" name="cep" required pattern="\d{5}-\d{3}" placeholder="00000-000"><br><br>
+            <div class="form-field-12"> 
+              <label for="estado">Estado:</label><br>
+              <input type="text" id="estado" name="estado" required maxlength="2" placeholder="SP">
+            </div>
 
-          <label for="cidade">Cidade:</label><br>
-          <input type="text" id="cidade" name="cidade" required><br><br>
+          </fieldset>
 
-          <label for="estado">Estado:</label><br>
-          <input type="text" id="estado" name="estado" required maxlength="2" placeholder="SP"><br><br>
-        </fieldset>
-
-        <input type="submit" value="Enviar Cadastro">
-      </form>
-    </section>
-  </main>
+          <input type="submit" value="Enviar Cadastro" class="btn btn-primary form-submit-12">
+        </form>
+      </section>
+    </div> </main>
 
   <footer>
-    <p>&copy; 2025 Grupo Solidário - Todos os direitos reservados.</p>
+    <div class="container">
+      <p>&copy; 2025 Grupo Solidário - Todos os direitos reservados.</p>
+    </div>
   </footer>
 </body>
 </html>
