--- a/index.html
+++ b/index.html
@@ -1,51 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grupo Solidário | Início</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Grupo Solidário | Início</title>
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <header>
-    <h1>Grupo Solidário</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="projetos.html">Projetos</a></li>
-        <li><a href="cadastro.html">Cadastro</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+    <div class="container"> 
+        <h1>Grupo Solidário</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="projetos.html">Projetos</a></li>
+                <li><a href="cadastro.html">Cadastro</a></li>
+            </ul>
+        </nav>
+    </div> </header>
 
-  <main>
-    <section>
-      <h2>Quem Somos</h2>
-      <p>O <strong>Grupo Solidário</strong> é uma organização sem fins lucrativos dedicada a promover ações sociais e ambientais, fortalecendo comunidades e incentivando o voluntariado.</p>
-      <img src="assets/images/ong1.jpg" alt="Voluntários do Grupo Solidário em ação" width="150
-      ">
-    </section>
+ <main>
+    <div class="container"> 
+        <section>
+            <h2>Quem Somos</h2>
+            <p>O <strong>Grupo Solidário</strong> é uma organização sem fins lucrativos dedicada a promover ações sociais e ambientais, fortalecendo comunidades e incentivando o voluntariado.</p>
+            <img src="assets/images/ong1.jpg" alt="Voluntários do Grupo Solidário em ação" class="imagem-principal"> 
+        </section>
 
-    <section>
-      <h2>Missão, Visão e Valores</h2>
-      <ul>
-        <li><strong>Missão:</strong> Promover solidariedade e sustentabilidade.</li>
-        <li><strong>Visão:</strong> Ser referência em impacto social positivo no Brasil.</li>
-        <li><strong>Valores:</strong> Ética, respeito e compromisso com a comunidade.</li>
-      </ul>
-    </section>
+        <section>
+            <h2>Missão, Visão e Valores</h2>
+            <ul>
+                <li><strong>Missão:</strong> Promover solidariedade e sustentabilidade.</li>
+                <li><strong>Visão:</strong> Ser referência em impacto social positivo no Brasil.</li>
+                <li><strong>Valores:</strong> Ética, respeito e compromisso com a comunidade.</li>
+            </ul>
+        </section>
 
-    <section>
-      <h2>Entre em Contato</h2>
-      <address>
-        E-mail: <a href="mailto:contato@gruposol.org">contato@gruposol.org</a><br>
-        Telefone: (11) 99999-9999<br>
-        Endereço: Rua da Esperança, 100 – São Paulo/SP
-      </address>
-    </section>
-  </main>
+        <section>
+            <h2>Entre em Contato</h2>
+            <address>
+                E-mail: <a href="mailto:contato@gruposol.org">contato@gruposol.org</a><br>
+                Telefone: (11) 99999-9999<br>
+                Endereço: Rua da Esperança, 100 – São Paulo/SP
+            </address>
+        </section>
+    </div>   </main>
 
-  <footer>
-    <p>&copy; 2025 Grupo Solidário - Todos os direitos reservados.</p>
-  </footer>
+ <footer>
+    <div class="container"> 
+        <p>&copy; 2025 Grupo Solidário - Todos os direitos reservados.</p>
+    </div>
+ </footer>
 </body>
 </html>
