--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Grupo Solidário | Início</title>
 <link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/acessibilidade.css">
 </head>
 <body>
 <header>
@@ -44,12 +45,13 @@
                 Endereço: Rua da Esperança, 100 – São Paulo/SP
             </address>
         </section>
-    </div>   </main>
+    </div> </main>
 
  <footer>
     <div class="container"> 
         <p>&copy; 2025 Grupo Solidário - Todos os direitos reservados.</p>
     </div>
  </footer>
+    <script src="assets/js/main.js" type="module"></script> 
 </body>
 </html>
