--- a/projetos.html
+++ b/projetos.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grupo Sol | Projetos</title>
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/acessibilidade.css">
 </head>
 <body>
   <header>
@@ -47,5 +48,6 @@
     <div class="container"> <p>&copy; 2025 Grupo Solidário - Todos os direitos reservados.</p>
     </div>
   </footer>
+      <script src="assets/js/main.js" type="module"></script> 
 </body>
 </html>
